@@ -1,5 +1,12 @@
 2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>
 
+	* Makefile.am:
+	Add intl templates to the dist package
+	* flumotion-fragmentedstreaming.spec.in:
+	Fix requirements and versions numbers
+
+2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>
+
 	* autoregen.sh (deleted):
 	Delete autogenerated file
 	* Makefile.am:
